<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">麒麟云科</string>
    <string name="back">返回</string>
    <string name="title_activity_wifitest">麒麟云科 - WIFI测试</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wifi_test">麒麟云科 - Wifi测试</string>
    <string name="title_activity_main">测试</string>
    <string name="title_activity_sd_card_test">麒麟云科 - SDCard测试</string>
    <string name="title_activity_ddr">麒麟云科 - Sdcard卡容量和内置存储测试</string>
    <string name="title_activity_blue_tooth">麒麟云科 - 蓝牙测试</string>
    <string name="title_activity_ethernet">麒麟云科 - 以太网测试</string>
    <string name="title_activity_usb_host">麒麟云科 - UsbHost测试</string>
    <string name="title_activity_audio">麒麟云科 - 音频测试</string>
    <string name="title_activity_av">麒麟云科 - AV测试</string>
    <string name="title_activity_video">麒麟云科 - Video测试</string>
    <string name="title_activity_result">麒麟云科 - 测试结果</string>
    <string name="refresh">刷新</string>
    <string name="pass">通过</string>
    <string name="fail">不通过</string>
    <string name="no_local_bluetooth">本机没有蓝牙设备！</string>
    <string name="video_test_on">视频播放测试开始！</string>
    <string name="wifi_test_on">WIFI模块测试开始！</string>
    <string name="bluetooth_test_on">蓝牙模块测试开始！</string>
    <string name="ethernet_test_on">以太网模块测试开始!</string>
    <string name="ethernet_connect">请连接网络！</string>
    <string name="av_test_on">AV测试开始</string>
    <string name="sdcard_test_on">TF卡测试开始！</string>
    <string name="tfcard_no">TFCard未插入</string>
    <string name="tfcard_out">TFCard已拔出</string>
    <string name="storage_test_on">DDR测试和内置存储测试开始！</string>
    <string name="audio_test_on">左右声道音频测试开始！</string>
    <string name="usb_test_on">UsbHost测试开始！</string>
    <string name="usb_tips">请插入usb设备，等待3秒钟！</string>
    <string name="no_sound">设备内部存储根目录下找不到soundone.mp3或者soundtwo.mp3文件!</string>
    <string name="no_av_video">设备内部存储/system/media目录下找不到test.mp4文件或者test2.mp4文件！</string>
    <string name="no_video">设备内部存储/system/media目录下找不到test.mp4文件!</string>
    <string name="no_img">设备内部存储根目录下找不到hdmi.png文件!</string>
    <string name="test_result">测试结果</string>
    <string name="scan_result">扫描结果：</string>
    <string name="scan_no_result">当前没有扫描到任何结果!</string>
    <string name="scan_tips">开始扫描...</string>
    <string name="scaning">正在扫描中...</string>
    <string name="wifi_name">：  热点名称 : </string>
    <string name="wifi_leve">信号强度 : </string>
    <string name="leve_one">一格</string>
    <string name="leve_two">两格</string>
    <string name="leve_three">三格</string>
    <string name="leve_full">满格</string>
    <string name="left_volume">左声道播放中...</string>
    <string name="right_volume">右声道播放中...</string>
    <string name="audio_left">左声道</string>
    <string name="audio_right">右声道</string>
    <string name="volume_up">音量+</string>
    <string name="volume_down">音量-</string>
    <string name="nothing">无</string>
    <string name="ddr_size">DDR容量：</string>
    <string name="storange">内置存储容量：</string>
    <string name="usb">是否有USB设备插入：</string>
    <string name="usb_type">USB型号：</string>
    <string name="usb_conn_tips">请连接USB设备！</string>
    <string name="takeCheckbox">请先勾选一项或一项以上的功能进行测试！</string>
    <string name="title_activity_hdmi">HDMI测试</string>
    <string name="title_activity_irda">红外线测试</string>
    <string name="title_activity_device">麒麟云科 - 压力测试</string>
    <string name="device_begin">开始压力测试</string>
    <string name="device_tip1">正在进行第</string>
    <string name="device_tip2">次压力测试...</string>
    <string name="rel_wifi">WIFI测试结果：</string>
    <string name="rel_av">AV测试结果：</string>
    <string name="rel_ping">Ping结果：</string>
    <string name="usb_vid">USB VID：</string>
    <string name="usb_pid">USB PID：</string>
    <string name="usb_size">USB容量：</string>
    <string name="rel_audio">音频测试结果：</string>
    <string name="rel_vedio">视频测试结果：</string>
    <string name="rel_hdmi">HDMI测试结果：</string>
    <string name="rel_bluetooth">蓝牙测试结果：</string>
    <string name="rel_irda">红外测试结果：</string>
    <string name="rel_device">压力测试结果：</string>
    <string name="sdcard_size">SDCard容量：</string>
    <string name="tfCard_size">TFCard容量：</string>
    <string name="sdcard">是否有SDCard：</string>
    <string name="sdcard_type">SDCard类型：</string>
    <string name="ip">IP地址：</string>
    <string name="maxVolume">当前音量已最大</string>
    <string name="minVolume">当前音量为0</string>
    <string name="rebootNumber">已重启次数：</string>
    <string name="device_start">----------压力测试开始----------</string>
    <string name="device_stop">----------压力测试结束----------</string>
    <string name="number">第</string>
    <string name="device_success">次压力测试成功</string>
    <string name="device_fail">次压力测试失败</string>
    <string name="video_start">----------视频播放测试开始----------</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="devicein">有设备插入</string>
    <string name="deviceout">设备已被拔出</string>

</resources>
