<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    tools:context="francis.kylintest.modules.DeviceActivity" >

    <LinearLayout
        android:id="@+id/devicell1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/device_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deviceClick"
            android:text="@string/pass" />

        <Button
            android:id="@+id/device_fail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deviceClick"
            android:text="@string/fail" />

        <Button
            android:id="@+id/device_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deviceClick"
            android:text="@string/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/devicell1"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fadingEdge="none" >

            <TextView
                android:id="@+id/device_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:text="@string/device_start"
                android:textSize="20sp" />
        </ScrollView>
        
        <TextView 
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rebootNumber"
            android:textSize="20sp"
            android:textColor="@color/white"/>
        <TextView 
            android:id="@+id/reNumber"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>