<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    tools:context="francis.kylintest.modules.BlueToothActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/bluetoothll1"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/blueTooth_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="blueToothClick"
            android:text="@string/pass" />

        <Button
            android:id="@+id/blueTooth_fail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="blueToothClick"
            android:text="@string/fail" />

        <Button
            android:id="@+id/blueTooth_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="blueToothClick"
            android:text="@string/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bluetoothll1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bluetooth_scantip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/scaning" />

        <ListView
            android:id="@+id/listView"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>