<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    tools:context="francis.kylintest.modules.SdCardTestActivity" >

    <LinearLayout
        android:id="@+id/ddrll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ddr_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ddrClick"
            android:text="@string/pass" />

        <Button
            android:id="@+id/ddr_fail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ddrClick"
            android:text="@string/fail" />

        <Button
            android:id="@+id/ddr_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ddrClick"
            android:text="@string/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ddrll1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/ddr_size"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ddr_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/storange"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/storage_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/sdcard_size"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sdcard_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>